# compliance-agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: UPGRADE_PLAN.md  architecture.md  report-schema.md
sample_data/policies/: privacy_v1.txt  privacy_v2.txt
sample_data/regulations/: ai_act_excerpt.txt  gdpr_excerpt.txt
sample_data/rules/: gdpr_rules.yaml  scenario_gdpr_check.yaml
src/compliance_agent/: __init__.py  cli.py
src/compliance_agent/dashboard/: app.py
src/compliance_agent/engine/: __init__.py  checker.py  drift.py  rag.py  reasoner.py  reporting.py
tests/: __init__.py  conftest.py  test_checker.py  test_cli.py  test_drift.py  test_engine_init.py  test_golden_sample.py  test_rag.py  test_rag_core.py  test_reasoner.py  test_reporting.py
