[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-agent"
version = "0.1.0"
description = "End-to-end compliance monitoring agent: regulatory RAG + semantic drift detection + differentiable rule reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Osama Moftah"}]
keywords = [
    "compliance",
    "legal-tech",
    "regulatory-intelligence",
    "rag",
    "drift-detection",
    "ddl",
    "gdpr",
    "ai-act",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "legaldrift>=0.1.0",
    "langchain>=0.3.0,<2.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<2.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "streamlit>=1.35.0,<2.0.0",
    "rich>=13.0.0,<14.0.0",
    "click>=8.1.0,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "plotly>=5.18.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
]

[project.scripts]
compliance-agent = "compliance_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 130
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 130

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
