[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-agent"
version = "0.2.0"
description = "Compliance screening copilot: explainable rule reasoning, regulatory RAG, and policy drift detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Osama Moftah"}]
keywords = [
    "compliance",
    "legal-tech",
    "regulatory-intelligence",
    "rag",
    "drift-detection",
    "ddl",
    "gdpr",
    "ai-act",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core install is lightweight: the rule reasoner, reports, and CLI need no ML stack.
dependencies = [
    "rich>=13.0.0,<15.0.0",
    "click>=8.1.0,<9.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
rag = [
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "langchain-huggingface>=0.1.0,<1.0.0",
    "langchain-chroma>=0.1.0,<1.0.0",
    "chromadb>=0.5.0,<2.0.0",
    "sentence-transformers>=3.0.0,<6.0.0",
]
drift = [
    "legaldrift>=0.1.0",
]
dashboard = [
    "streamlit>=1.35.0,<2.0.0",
]
all = [
    "compliance-agent[rag,drift,dashboard]",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
]

[project.scripts]
compliance-agent = "compliance_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 130
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = [
    "*/dashboard/*",
]
